<resources>
    <string name="app_name">JourneyJournal</string>
    <string name="splashText">Record your journey ...</string>
    <string name="welcomeText">Welcome !</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="noAccount">Create an account</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="accountExists">Log in using an existing account</string>
    <string name="logout">Log Out</string>
    <string name="search">Search</string>
    <string name="journalTitle">This is journal title</string>
    <string name="journalDate">MM / DD / YYYY</string>
    <string name="journalTitleInput">Journal Title</string>
    <string name="addPhoto">Add Image</string>
    <string name="submit">Submit</string>
    <string name="select">DONE</string>
    <string name="API_KEY" translatable="false">AIzaSyAFy5yqPks7unLvY479LNtrSUQ7yu4-WLU</string>
    <string name="journalLocation">Location</string>
    <string name="description">This is description about the journal.</string>
    <string name="update">Update</string>
    <string name="change">Change</string>
    <string name="loading">Loading..</string>
    <string name="loggingIn">Signing In..</string>
    <string name="Journal">Journal</string>
    <string name="fixUser">Keep me signed in</string>
    <string name="myJournal">My Journals</string>
</resources>