<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp"
    android:elevation="5dp"
    app:strokeColor="@color/grey"
    app:strokeWidth="1dp"
    android:id="@+id/recyclerCard"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/recyclerJournalImage"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_account"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recyclerJournalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journalTitle"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/primary"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recyclerJournalDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journalDate"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:alpha="0.85"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recyclerJournalLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journalLocation"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:alpha="0.75"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat
>

</com.google.android.material.card.MaterialCardView>