<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JournalDetailsActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/primary"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/deleteButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_delete"
        android:background="@color/white"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="24dp"
        android:padding="2dp"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detailImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/default_landscape"
            android:layout_marginBottom="4dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journalTitle"
            android:layout_marginVertical="8dp"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journalDate"
            android:layout_marginVertical="4dp"
            android:textSize="18sp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:padding="2dp"
            >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journalLocation"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mapDisplayButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_location"
                android:background="@color/white"
                android:tint="@color/primary"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginVertical="4dp"
            android:textSize="16sp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/primary"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:icon="@drawable/ic_edit"
        app:iconTint="@color/white"
        android:textColor="@color/white"
        app:strokeWidth="0dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>